--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,30 +2,52 @@ image: python:3.9-buster
 
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   PACKAGE_NAME: readcsv
 
-cache:
-  paths:
-    - .cache/pip
-    - venv/
+.cache-paths: &cache-paths
+    paths:
+      - .cache/pip
+      - venv
+
+.cache-user:
+  cache:
+    <<: *cache-paths
+    policy: pull
+
+.cache-creator:
+  cache:
+    <<: *cache-paths
+    policy: push
 
 before_script:
-  - python -V  # Print out python version for debugging
+  - /usr/bin/python3 -V  # Print out python version for debugging
+  - env| egrep 'CI_|PIP_' || true
 
 stages:
+  - prep
   - build
   - install
   - test
   - docs
 
-build:
-  stage: build
+
+prep:
+  extends: .cache-creator
+  stage: prep
   script:
     - python3 -m venv venv
     - . venv/bin/activate
-    - pip install --upgrade pip
-    - pip install --upgrade build
-    - python -m build
+    - pip install --upgrade pip build wheel setuptools
+  tags:
+    - container
+
+build:
+  extends: .cache-user
+  stage: build
+  script:
+    - . venv/bin/activate
+    - python3 -m build
   artifacts:
     paths:
       - dist/*.whl
@@ -33,37 +55,53 @@ build:
     - container
 
 test-install:
+  extends: .cache-user
   stage: install
   script:
-    - python3 -m venv venv
     - . venv/bin/activate
-    - pip install --upgrade pip
+    - pip list
     - pip install dist/*.whl
+    - pip list
   tags:
     - container
 
 run-examples:
+  extends: .cache-user
   stage: test
   script:
-    - python3 -m venv venv
     - . venv/bin/activate
+    - pip list
+    - pip install dist/*.whl
+    - pip list
     - python3 -m readcsv.test_csvreader
     - python3 -m readcsv.examples
   tags:
     - container
 
-docs:
+.docs-stage:
+  extends: .cache-user
   stage: docs
   script:
-    - python3 -m venv venv
     - . venv/bin/activate
-    - pip install pdoc3
-    - mkdir -p docs
-    - PYTHONPATH=src pdoc $PACKAGE_NAME > README_api.md
-    - PYTHONPATH=src pdoc --html -o docs/html $PACKAGE_NAME
+    - pip list
+    - pip install pytest pdoc3
+    - pip install dist/*.whl
+    - pip list
+    - mkdir -p public
+    - PYTHONPATH=src pdoc $PACKAGE_NAME > public/README_api.md
+    - PYTHONPATH=src pdoc --html -o public/html $PACKAGE_NAME
   artifacts:
     paths:
-      - README_api.md
-      - docs/html/$(PACKAGE_NAME)/**/*.*
+      - public
   tags:
     - container
+
+docs:
+  extends: .docs-stage
+  except:
+    - master
+    
+pages:
+  extends: .docs-stage
+  only:
+    - master
