--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-dist_dir = .
+dist_dir = dist
 package_dir =
     = src
 packages = find:
@@ -25,3 +25,6 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[egg_info]
+tag_date = 1
