makefile and gitlab ci updates

--- a/Makefile.pymodule
+++ b/Makefile.pymodule
@@ -1,45 +1,66 @@
+# Reminder, '=' is lazily evaluated, := is immediately evaluated
+
 SHELL          := bash
 # Macros for use in path generation
 empty          :=
 space          := $(empty) $(empty)
-comma           = ,
-colon           = :
+comma          := ,
+colon          := :
 join-with       = $(subst $(space),$1,$(strip $2))
 path-gen        = $(join-with $(colon),$1)
 VENV           := venv
 ACTIVATE       := source $(VENV)/bin/activate
 VERSION        := $(shell tr -d ' ' < setup.cfg | awk -F= '/^version=/ {print $$2}')
-DISTWHEEL_GLOB  = $(PACKAGE_NAME)-$(VERSION)*-py3-none-any.whl
-DISTWHEEL_LAST := $(shell ls -tr dist/$(DISTWHEEL_GLOB) | head -n1 | cut -d/ -f2-)
+DISTWHEEL_GLOB := $(PACKAGE_NAME)-$(VERSION)*-py3-none-any.whl
+DISTWHEEL_LAST  = $(shell echo running distwheel_last 1>&2; ls -tr dist/$(DISTWHEEL_GLOB) 2> /dev/null | head -n1 | cut -d/ -f2-)
 DISTWHEEL      := $(PACKAGE_NAME)-$(VERSION)-py3-none-any.whl
 README         := README.md
 README_API     := README_api.md
 SRC            := src
-SOURCES        := $(wildcard $(SRC)/$(PACKAGE_NAME)/*.py)
+SOURCES         = $(shell bash -c 'shopt -s globstar; ls $(SRC)/$(PACKAGE_NAME)/**/*.py')
 PYTHON         := python3
+PIP            := pip
 PYVER          := $(shell $(PYTHON) --version | awk '{print $$2}' | cut -d. -f1-2)
 PYVER_NODOTS   := $(subst .,,$(PYVER))
 RUN_PY_MOD     := $(PYTHON) -m
+RUN_TESTS      := pytest $(SRC)
 WITH_VENV      := $(ACTIVATE) &&
 PIP_INSTALL    := $(WITH_VENV) pip install
 WITH_PYPATH    := PYTHONPATH=$(PWD)/$(SRC)
-OPTIONALS      := attrdict
+OPTIONALS      := 
 MD_VIEWER      := retext
 DOCS_INDEX     := docs/html/$(PACKAGE_NAME)/index.html
 TWINE_UPLOAD   ?= ""
 UPLOAD_WHEEL    = twine upload -r "$(TWINE_UPLOAD)"
 PYLINT_DISABLED = invalid-name \
-                  too-many-branches \
+                  line-too-long \
+                  trailing-newlines \
+                  bare-except \
+                  unused-wildcard-import \
+                  wildcard-import \
+                  unused-import \
+                  wrong-import-position \
+                  import-error \
+                  missing-function-docstring \
+                  missing-module-docstring \
+                  missing-class-docstring \
+                  too-few-public-methods \
                   too-many-instance-attributes \
-                  line-too-long
+                  too-many-arguments \
+                  too-many-branches \
+                  too-many-nested-blocks \
+                  too-many-statements \
+                  too-many-public-methods \
+                  too-many-locals
+
 PYLINT_FLAGS   := -d $(call join-with,$(comma),$(PYLINT_DISABLED))
 CLEAN_PATTERNS := \
     build \
     dist \
-    src/$(PACKAGE_NAME)/__pycache__ \
+	src/**/__pycache__  \
     .pytest_cache \
     *.whl \
-    src/*.egg-info
+    src/**/*.egg-info
 
 define echo_fail
 	(echo "$(1)"; false)
@@ -83,11 +104,21 @@ view-docs: docs
 build-reqs: venv
 	($(WITH_VENV) pip list | egrep '^build[[:space:]]') || ( $(PIP_INSTALL) --upgrade build )
 
-.PHONY:: build
-build: dist-clean build-reqs
-	$(WITH_VENV) python3 -m build
+.run-build:
+	$(WITH_VENV) $(PYTHON) -m build
+	@# delete trash that is created in the source tree by the build
+	rm -rf $(SRC)/*.egg-info
+
+.copy-distwheel-last:
+	echo "copy-distwheel-last:$(shell ls -tr dist/$(DISTWHEEL_GLOB) 2> /dev/null | head -n1 | cut -d/ -f2-)" 
+	echo test -f "dist/$(DISTWHEEL_LAST)"
 	test -f "dist/$(DISTWHEEL_LAST)"
-	cp dist/$(DISTWHEEL_LAST) $(DISTWHEEL)
+	cp "dist/$(DISTWHEEL_LAST)" "$(DISTWHEEL)"
+
+.perform-build: .run-build .copy-distwheel-last
+
+.PHONY:: build
+build: dist-clean build-reqs .perform-build
 
 .PHONY:: dist
 dist: $(DISTWHEEL)
@@ -99,7 +130,7 @@ $(DISTWHEEL): dist/$(DISTWHEEL)
 wheel: $(DISTWHEEL)
 
 clean: clean-docs clean-venv
-	rm -rf $(CLEAN_PATTERNS)
+	bash -c 'shopt -s globstar; rm -rf  $(CLEAN_PATTERNS) '   
 
 clean-docs:
 	rm -rf ./docs
@@ -107,10 +138,20 @@ clean-docs:
 clean-venv:
 	rm -rf ./$(VENV)
 
-create-venv:
+.create-venv:
 	$(PYTHON) -m venv $(VENV)
-	$(PIP_INSTALL) --upgrade pip
-	$(PIP_INSTALL) pylint pdoc3 build pytest $(OPTIONALS)
+	$(PIP_INSTALL) --upgrade pip wheel
+
+venv-dev-base:
+	$(PIP_INSTALL) --upgrade setuptools build
+	$(PIP_INSTALL) pylint pdoc3 pytest $(OPTIONALS)
+
+venv-run-base:
+	if test -n "$(OPTIONALS)" ; then $(PIP_INSTALL) $(OPTIONALS) ; fi
+
+venv-additional::
+
+create-venv: .create-venv venv-dev-base venv-additional
 
 .PHONY:: venv
 venv:
@@ -119,6 +160,9 @@ venv:
 venv-install: venv $(DISTWHEEL)
 	$(PIP_INSTALL) --force-reinstall $(DISTWHEEL)
 
+venv-shell: venv
+	$(ACTIVATE) && bash -i
+
 upload-release:
 	test -f "$(DISTWHEEL)"    || $(call echo_fail,No distwheel file available)
 	test -n "$(TWINE_UPLOAD)" || $(call echo_fail,No twine upload repo set)
@@ -126,6 +170,6 @@ upload-release:
 
 upload-dev:
 	make print-vars
-	test -f dist/$(DISTWHEEL_LAST) || $(call echo_fail No distwheel file available)
+	test -f "dist/$(DISTWHEEL_LAST)" || $(call echo_fail No distwheel file available)
 	test -n "$(TWINE_UPLOAD)"      || $(call echo_fail No twine upload repo set)
 	$(UPLOAD_WHEEL) "dist/$(DISTWHEEL_LAST)"
