--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ run-examples:
   extends: .run-examples
   script:
     - . venv/bin/activate
-    - pip install dist/*.whl
+    - pip install ${PIP_OPTIONS} dist/*.whl
     - python3 -m readcsv.test_csvreader
     - python3 -m readcsv.examples
 
